force-app/main/default/objects/Duty_JIT_Calculation__c/Duty_JIT_Calculation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Duty &amp; JIT Calculation</label>
</CustomObject>