force-app/main/default/objects/Duty_JIT_Calculation__c/fields/Duty_Request_Days_PC__c.field-meta.xml
<CustomField>
    <fullName>Duty_Request_Days_PC__c</fullName>
    <label>Duty Request Days (PC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>