force-app/main/default/objects/Duty_JIT_Calculation__c/fields/JIT_Work_Days_PC__c.field-meta.xml
<CustomField>
    <fullName>JIT_Work_Days_PC__c</fullName>
    <label>JIT Work Days (PC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>